[tool.poetry]
name = "TerrariaCartographer"
version = "0.1.2"
description = "A tool that reads Terraria world files, and polls tShock APIs, to produce a 'live' world map complete with player locations."
authors = ["Martin George <marty@dii.ngo>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "TerrariaCartographer" },
]

[tool.poetry.dependencies]
python = "^3.9"
terramapper = {git = "https://github.com/martydingo/TerraMapper"}
terragps = {git = "https://github.com/martydingo/TerraGPS"}


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
